force-app/main/default/objects/Subscriptions__c/fields/Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Street_Number__c</fullName>
    <label>Street Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>