force-app/main/default/objects/Subscriptions__c/fields/Street_Number_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Street_Number_Suffix__c</fullName>
    <label>Street Number Suffix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>