force-app/main/default/objects/Subscriptions__c/fields/Street_Type__c.field-meta.xml
<CustomField>
    <fullName>Street_Type__c</fullName>
    <label>CS_Street Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACRES, ACRES</fullName>
            </value>
            <value>
                <fullName>ALLEY, ALY</fullName>
            </value>
            <value>
                <fullName>ANNEX, ANX</fullName>
            </value>
            <value>
                <fullName>ARCADE, ARC</fullName>
            </value>
            <value>
                <fullName>AVENUE, AVE</fullName>
            </value>
            <value>
                <fullName>BAY, BAY</fullName>
            </value>
            <value>
                <fullName>BAYOU, BYU</fullName>
            </value>
            <value>
                <fullName>BEACH, BCH</fullName>
            </value>
            <value>
                <fullName>BELTWAY, BLTY</fullName>
            </value>
            <value>
                <fullName>BEND, BND</fullName>
            </value>
            <value>
                <fullName>BLUFF, BLF</fullName>
            </value>
            <value>
                <fullName>BOTTOM, BTM</fullName>
            </value>
            <value>
                <fullName>BOULEVARD, BLVD</fullName>
            </value>
            <value>
                <fullName>BRANCH, BR</fullName>
            </value>
            <value>
                <fullName>BRIDGE, BRG</fullName>
            </value>
            <value>
                <fullName>BROOK, BRK</fullName>
            </value>
            <value>
                <fullName>BURG, BG</fullName>
            </value>
            <value>
                <fullName>BYPASS, BYP</fullName>
            </value>
            <value>
                <fullName>CAMP, CP</fullName>
            </value>
            <value>
                <fullName>CANYON, CYN</fullName>
            </value>
            <value>
                <fullName>CAPE, CPE</fullName>
            </value>
            <value>
                <fullName>CAUSEWAY, CSWY</fullName>
            </value>
            <value>
                <fullName>CENTER, CTR</fullName>
            </value>
            <value>
                <fullName>CHASE, CHASE</fullName>
            </value>
            <value>
                <fullName>CIRCLE, CIR</fullName>
            </value>
            <value>
                <fullName>CLIFFS, CLFS</fullName>
            </value>
            <value>
                <fullName>CLUB, CLB</fullName>
            </value>
            <value>
                <fullName>CLUSTER, CL</fullName>
            </value>
            <value>
                <fullName>COMMON, COM</fullName>
            </value>
            <value>
                <fullName>CORNER, COR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>