force-app/main/default/objects/Subscriptions__c/fields/Sub_ID_18_characters__c.field-meta.xml
<CustomField>
    <fullName>Sub_ID_18_characters__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub ID 18 characters</label>
    <type>Text</type>
</CustomField>