force-app/main/default/objects/Subscriptions__c/fields/Subscription_Key__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Key__c</fullName>
    <displayFormat>S-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Subscription Key</label>
    <type>AutoNumber</type>
</CustomField>