force-app/main/default/objects/Subscriptions__c/fields/Suspend_to_Active__c.field-meta.xml
<CustomField>
    <fullName>Suspend_to_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspend to Active</label>
    <type>Checkbox</type>
</CustomField>