force-app/main/default/objects/Subscriptions__c/fields/TREND_Agent_Code__c.field-meta.xml
<CustomField>
    <fullName>TREND_Agent_Code__c</fullName>
    <description>RAPATTONI Agent Code</description>
    <label>TREND Agent Code</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>