force-app/main/default/objects/Subscriptions__c/fields/TREND_Home_Phone_on_Directory__c.field-meta.xml
<CustomField>
    <fullName>TREND_Home_Phone_on_Directory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TREND Home Phone on Directory</label>
    <type>Checkbox</type>
</CustomField>