force-app/main/default/objects/Subscriptions__c/fields/TREND_Login_Name__c.field-meta.xml
<CustomField>
    <fullName>TREND_Login_Name__c</fullName>
    <label>TREND Login Name</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>