force-app/main/default/objects/Subscriptions__c/fields/TREND_Member_Number__c.field-meta.xml
<CustomField>
    <fullName>TREND_Member_Number__c</fullName>
    <label>TREND Member Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>