force-app/main/default/objects/Subscriptions__c/fields/UniqueSubscriptionCount__c.field-meta.xml
<CustomField>
    <fullName>UniqueSubscriptionCount__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Subscription Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>