force-app/main/default/objects/Subscriptions__c/fields/VM_Ext__c.field-meta.xml
<CustomField>
    <fullName>VM_Ext__c</fullName>
    <label>VM Ext</label>
    <length>10</length>
    <type>Text</type>
</CustomField>