force-app/main/default/objects/Subscriptions__c/fields/Voicemail__c.field-meta.xml
<CustomField>
    <fullName>Voicemail__c</fullName>
    <label>Voicemail</label>
    <type>Phone</type>
</CustomField>