force-app/main/default/objects/Subscriptions__c/fields/WL_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>WL_Street_Address__c</fullName>
    <formula>Street_Number__c &amp; &quot; &quot; &amp; Street_Name__c &amp; &quot; &quot; &amp; LEFT( TEXT(Street_Type__c) , (FIND( &quot;,&quot; , TEXT(Street_Type__c))-1) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WL Street Address</label>
    <type>Text</type>
</CustomField>