force-app/main/default/objects/Subscriptions__c/fields/Zuora_Service_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Service_Activation_Date__c</fullName>
    <label>Zuora Service Activation Date</label>
    <type>DateTime</type>
</CustomField>