force-app/main/default/objects/Subscriptions__c/fields/Zuora_Status__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Status__c</fullName>
    <label>Zuora Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>