force-app/main/default/objects/Subscriptions__c/fields/ZuoraIntegrationWorkflowBypass__c.field-meta.xml
<CustomField>
    <fullName>ZuoraIntegrationWorkflowBypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZuoraIntegrationWorkflowBypass</label>
    <type>Checkbox</type>
</CustomField>