force-app/main/default/objects/Subscriptions__c/fields/ZuoraSubscriptionPreactivationSync__c.field-meta.xml
<CustomField>
    <fullName>ZuoraSubscriptionPreactivationSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine if the Zuora subscription operations have been performed before activation. This will allow ezJoin and manual operations to be performed and not be overwritten by any on-activation workflow.</description>
    <label>ZuoraSubscriptionPreactivationSync</label>
    <type>Checkbox</type>
</CustomField>