force-app/main/default/objects/Subscriptions__c/validationRules/Agent_Office_Num.validationRule-meta.xml
<ValidationRule>
    <fullName>Agent_Office_Num</fullName>
    <active>true</active>
    <description>Rule for agent office phone.</description>
    <errorConditionFormula>NOT(REGEX(Agent_Office_Phone__c, &quot;^$|\\D*1?(\\D*\\d{3}){3}\\d\\D*&quot;)) 
&amp;&amp; NOT( $Setup.Bypass_Validation_rules__c.Disable_Validation_Rules__c )</errorConditionFormula>
    <errorMessage>Please make sure Agent Office Phone Number is properly formatted. -  (xxx) xxx-xxxx</errorMessage>
</ValidationRule>