force-app/main/default/objects/Subscriptions__c/validationRules/Billing_POBox_should_be_numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_POBox_should_be_numeric</fullName>
    <active>true</active>
    <description>Billing POBox should be numeric</description>
    <errorConditionFormula>AND( NOT( ISNUMBER( QAS_Billing_POBox__c)), NOT(ISBLANK(QAS_Billing_POBox__c)))</errorConditionFormula>
    <errorDisplayField>QAS_Billing_POBox__c</errorDisplayField>
    <errorMessage>Enter numeric value</errorMessage>
</ValidationRule>