force-app/main/default/objects/Subscriptions__c/validationRules/CAM_cannot_edit_contact_name.validationRule-meta.xml
<ValidationRule>
    <fullName>CAM_cannot_edit_contact_name</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name = &quot;Marketing/CAMs&quot; &amp;&amp;  (PRIORVALUE(  Addl_Display_Name__c  ) &lt;&gt;  Addl_Display_Name__c )</errorConditionFormula>
    <errorDisplayField>Addl_Display_Name__c</errorDisplayField>
    <errorMessage>You are not allowed to edit the name.</errorMessage>
</ValidationRule>