force-app/main/default/objects/Subscriptions__c/validationRules/CAM_cannot_edit_SubscriptionID.validationRule-meta.xml
<ValidationRule>
    <fullName>CAM_cannot_edit_SubscriptionID</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name = &quot;Marketing/CAMs&quot; &amp;&amp;  (PRIORVALUE(Name) &lt;&gt; Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You are not allowed to edit the subscription ID.</errorMessage>
</ValidationRule>