force-app/main/default/objects/Subscriptions__c/validationRules/Date_Joined_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Joined_Required</fullName>
    <active>true</active>
    <description>Date Joined Required when Status=Active</description>
    <errorConditionFormula>TEXT(Status__c)=&quot;Active&quot; &amp;&amp; ISNULL(Date_Joined__c)
&amp;&amp; NOT( $Setup.Bypass_Validation_rules__c.Disable_Validation_Rules__c )</errorConditionFormula>
    <errorDisplayField>Date_Joined__c</errorDisplayField>
    <errorMessage>Required when Status=Active</errorMessage>
</ValidationRule>