force-app/main/default/objects/Subscriptions__c/validationRules/Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Date</fullName>
    <active>true</active>
    <description>This field will accept only future dates</description>
    <errorConditionFormula>AND(Future_Termination_Date__c &lt;=  TODAY(),  ISCHANGED(Future_Termination_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Future_Termination_Date__c</errorDisplayField>
    <errorMessage>Please enter a future date</errorMessage>
</ValidationRule>