force-app/main/default/objects/Subscriptions__c/validationRules/Home_Fax.validationRule-meta.xml
<ValidationRule>
    <fullName>Home_Fax</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Home_Fax__c, &quot;^$|\\D*1?(\\D*\\d{3}){3}\\d\\D*&quot;)) 
&amp;&amp; NOT( $Setup.Bypass_Validation_rules__c.Disable_Validation_Rules__c )</errorConditionFormula>
    <errorMessage>Please make sure Home Fax Number is properly formatted. - (xxx) xxx-xxxx</errorMessage>
</ValidationRule>