force-app/main/default/objects/Subscriptions__c/validationRules/License_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>License_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
OR (
ISPICKVAL (Subscription_Type__c, &quot;Realtor/Shareholder&quot;),
ISPICKVAL (Subscription_Type__c, &quot;Realtor/Non Shareholder&quot;),
ISPICKVAL (Subscription_Type__c, &quot;Licensee/Non Realtor&quot;),
ISPICKVAL (Subscription_Type__c, &quot;Appraiser/Shareholder&quot;),
ISPICKVAL (Subscription_Type__c, &quot;Appraiser/Non Shareholder&quot;)),
ISBLANK ( License__c)
)
&amp;&amp; NOT( $Setup.Bypass_Validation_rules__c.Disable_Validation_Rules__c )</errorConditionFormula>
    <errorDisplayField>License__c</errorDisplayField>
    <errorMessage>Please enter the license for this subscription type.</errorMessage>
</ValidationRule>