force-app/main/default/objects/Subscriptions__c/validationRules/Lockout_Subscription_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Lockout_Subscription_ID</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
NOT( ISNEW() ), 
ISCHANGED( Name ) 
)
&amp;&amp; NOT( $Setup.Bypass_Validation_rules__c.Disable_Validation_Rules__c )</errorConditionFormula>
    <errorMessage>The Subscription ID cannot be changed.</errorMessage>
</ValidationRule>