force-app/main/default/objects/Subscriptions__c/validationRules/Mailing_POBox_should_be_numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Mailing_POBox_should_be_numeric</fullName>
    <active>true</active>
    <description>Mailing POBox should be numeric</description>
    <errorConditionFormula>AND(NOT(ISBLANK(QAS_Mailing_POBox__c)),NOT( ISNUMBER(QAS_Mailing_POBox__c )))</errorConditionFormula>
    <errorDisplayField>QAS_Mailing_POBox__c</errorDisplayField>
    <errorMessage>Enter numeric value</errorMessage>
</ValidationRule>