force-app/main/default/objects/Subscriptions__c/validationRules/Mobile_Phone_cannot_be_all_zeros.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Phone_cannot_be_all_zeros</fullName>
    <active>true</active>
    <errorConditionFormula>OR(REGEX(Mobile_Phone__c, &quot;\\D+\\d*|\\d+\\D+&quot;),REGEX(Mobile_Phone__c, &quot;^[^A-Za-z1-9_]*0$&quot;))</errorConditionFormula>
    <errorDisplayField>Mobile_Phone__c</errorDisplayField>
    <errorMessage>Invalid Phone number</errorMessage>
</ValidationRule>