force-app/main/default/objects/Subscriptions__c/validationRules/No_Other_Primary.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Other_Primary</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( Primary__c ) &amp;&amp; Primary__c=True &amp;&amp;  NOT(ISBLANK(Contact__r.Primary_Subscription_ID__c))
&amp;&amp; NOT( $Setup.Bypass_Validation_rules__c.Disable_Validation_Rules__c )</errorConditionFormula>
    <errorDisplayField>Primary__c</errorDisplayField>
    <errorMessage>Only one primary subscription can be assigned to a Contact</errorMessage>
</ValidationRule>