force-app/main/default/objects/Subscriptions__c/validationRules/Pager_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Pager_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Pager__c, &quot;^$|\\D*1?(\\D*\\d{3}){3}\\d\\D*&quot;)) 
&amp;&amp; NOT( $Setup.Bypass_Validation_rules__c.Disable_Validation_Rules__c )</errorConditionFormula>
    <errorMessage>Please make sure Pager Number is properly formatted. - (xxx) xxx-xxxx</errorMessage>
</ValidationRule>