force-app/main/default/objects/Subscriptions__c/validationRules/Phone_Num.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Num</fullName>
    <active>false</active>
    <description>Makes sure phone and fax numbers are properly formatted.</description>
    <errorConditionFormula>OR( 
NOT(REGEX(Agent_Office_Phone__c, &quot;^$|\\D*1?(\\D*\\d{3}){3}\\d\\D*&quot;)), 
NOT(REGEX(Fax__c, &quot;^$|\\D*1?(\\D*\\d{3}){3}\\d\\D*&quot;)), 
NOT(REGEX(Home_Fax__c, &quot;^$|\\D*1?(\\D*\\d{3}){3}\\d\\D*&quot;)), 
NOT(REGEX(Mobile_Phone__c, &quot;^$|\\D*1?(\\D*\\d{3}){3}\\d\\D*&quot;)), 
NOT(REGEX(Primary_Phone__c, &quot;^$|\\D*1?(\\D*\\d{3}){3}\\d\\D*&quot;)), 
NOT(REGEX(Voicemail__c, &quot;^$|\\D*1?(\\D*\\d{3}){3}\\d\\D*&quot;)), 
NOT(REGEX(Pager__c, &quot;^$|\\D*1?(\\D*\\d{3}){3}\\d\\D*&quot;)))
&amp;&amp; NOT( $Setup.Bypass_Validation_rules__c.Disable_Validation_Rules__c )</errorConditionFormula>
    <errorMessage>Make sure phone and fax numbers are properly formatted.</errorMessage>
</ValidationRule>