force-app/main/default/objects/Subscriptions__c/validationRules/Primary_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Phone</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Primary_Phone__c, &quot;^$|\\D*1?(\\D*\\d{3}){3}\\d\\D*&quot;)) 
&amp;&amp; NOT( $Setup.Bypass_Validation_rules__c.Disable_Validation_Rules__c )</errorConditionFormula>
    <errorMessage>Please make sure Primary Phone Number is properly formatted. - (xxx) xxx-xxxx</errorMessage>
</ValidationRule>