force-app/main/default/objects/Subscriptions__c/validationRules/Status_Change_Fee_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Change_Fee_Required</fullName>
    <active>true</active>
    <description>When Status is changed from Inactive to Active a value must be provided in Status Change Fee field</description>
    <errorConditionFormula>AND( 
ISCHANGED(Status__c), 
TEXT(Status__c)=&quot;Active&quot;, 
TEXT(PRIORVALUE(Status__c))=&quot;Inactive&quot;, 
TEXT(Status_Change_Fee__c)=&quot;&quot;)
&amp;&amp; NOT( $Setup.Bypass_Validation_rules__c.Disable_Validation_Rules__c )</errorConditionFormula>
    <errorDisplayField>Status_Change_Fee__c</errorDisplayField>
    <errorMessage>Required when changing Status from Inactive to Active</errorMessage>
</ValidationRule>