force-app/main/default/objects/Subscriptions__c/validationRules/Status_Change_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Change_Reason_Required</fullName>
    <active>true</active>
    <description>If Status is changed from Active to Inactive or Inactive to Active; value must be provided in the Reason for Change field</description>
    <errorConditionFormula>AND( 
ISCHANGED(Status__c), 
TEXT(Status__c)=&quot;Inactive&quot;, 
TEXT(PRIORVALUE(Status__c))=&quot;Active&quot;,
TEXT(Status_Change_Reason__c)=&quot;&quot; 
)
&amp;&amp; NOT( $Setup.Bypass_Validation_rules__c.Disable_Validation_Rules__c )</errorConditionFormula>
    <errorDisplayField>Status_Change_Reason__c</errorDisplayField>
    <errorMessage>Required when changing to this Status</errorMessage>
</ValidationRule>