force-app/main/default/objects/Subscriptions__c/validationRules/TREND_Login_Name_Mandatory_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>TREND_Login_Name_Mandatory_Check</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Service_Jurisdiction__c, &apos;TREND&apos;) &amp;&amp;  TREND_Login_Name__c == null</errorConditionFormula>
    <errorDisplayField>TREND_Login_Name__c</errorDisplayField>
    <errorMessage>Missing required field: TREND Login Name</errorMessage>
</ValidationRule>