force-app/main/default/objects/Subscriptions__c/validationRules/Voice_mail.validationRule-meta.xml
<ValidationRule>
    <fullName>Voice_mail</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Voicemail__c, &quot;^$|\\D*1?(\\D*\\d{3}){3}\\d\\D*&quot;)) 
&amp;&amp; NOT( $Setup.Bypass_Validation_rules__c.Disable_Validation_Rules__c )</errorConditionFormula>
    <errorMessage>Please make sure voicemail Number is properly formatted. - (xxx) xxx-xxxx</errorMessage>
</ValidationRule>