force-app/main/default/objects/Subscriptions__c/validationRules/VoiceMail_Required_if_VM_Ext_Entered.validationRule-meta.xml
<ValidationRule>
    <fullName>VoiceMail_Required_if_VM_Ext_Entered</fullName>
    <active>true</active>
    <description>VoiceMail is Required if VM Ext Field value is eneterd.</description>
    <errorConditionFormula>AND(ISBLANK(Voicemail__c) , NOT(ISBLANK(VM_Ext__c)))</errorConditionFormula>
    <errorDisplayField>Voicemail__c</errorDisplayField>
    <errorMessage>Enter Voicemail</errorMessage>
</ValidationRule>