force-app/main/default/objects/Subscriptions__c/listViews/AgentsInactive.listView-meta.xml
<ListView>
    <fullName>AgentsInactive</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Contact_Type__c</columns>
    <columns>Subscription_Type__c</columns>
    <columns>Date_Terminated__c</columns>
    <columns>Service_Jurisdiction__c</columns>
    <columns>Contact__c</columns>
    <columns>Related_Location_Broker_Office__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Agent</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <filters>
        <field>Date_Terminated__c</field>
        <operation>greaterThan</operation>
        <value>10/28/2011</value>
    </filters>
    <label>AgentsInactive</label>
</ListView>