force-app/main/default/objects/Subscriptions__c/listViews/AppraisersActive.listView-meta.xml
<ListView>
    <fullName>AppraisersActive</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Contact_Type__c</columns>
    <columns>Subscription_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Appraiser</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>AppraisersActive</label>
</ListView>